added required maps

--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -22,10 +22,30 @@
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
     <!-- copy those 5 lines above, change green links and names -->
-    <h2>Pseudo Mercator</h2>
+    <h2>Pseudo Mercator Projection</h2>
     <h3>Some observations</h3>
     <a href=".//maps/3857Pseudomercatorimg.png">
     <img src=".//maps/3857Pseudomercatorimg.png" alt="3857" width='500px'>
+    </a>
+    <h2>Sphere Winkel Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/53018SphereWinkel.png">
+    <img src=".//maps/53018SphereWinkel.png" alt="53018" width='500px'>
+    </a>
+    <h2>World Cylindrical Equal Area Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/54034WorldCylindrical.png">
+    <img src=".//maps/54034WorldCylindrical.png" alt="54034" width='500px'>
+    </a>
+    <h2>World Equidistant Conic Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/54027WorldEqiConic.png">
+    <img src=".//maps/54027WorldEqiConic.png" alt="54027" width='500px'>
+    </a>
+    <h2>North Pole Azimuthal Equidistant Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/102016NorthPoleAziEqi.png">
+    <img src=".//maps/102016NorthPoleAziEqi.png" alt="102016" width='500px'>
     </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
