--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -11,15 +11,15 @@
     <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
     <p>You can write a paragraph here</p>
     
-    <h2>WGS84 Projection</h2>
+    <h2>WGS84 (Simple Mercator) Projection</h2>
     <h3>Some observations</h3>
-    <a href=".//maps/4326.png">
-    <img src=".//maps/4326.png" alt="WGS84" width='500px'>
+    <a href=".//maps/SimpleMercator.png">
+    <img src=".//maps/SimpleMercator.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
     <h3>Some observations</h3>
-    <a href=".//maps/54043.png"> 
-    <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
+    <a href=".//maps/Aitoff.png"> 
+    <img src=".//maps/Aitoff.png" alt="Aitoff" width='500px'>
     </a>
     <!-- copy those 5 lines above, change green links and names -->
     <h2>Pseudo Mercator Projection</h2>
