--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -47,6 +47,16 @@
     <a href=".//maps/102016NorthPoleAziEqi.png">
     <img src=".//maps/102016NorthPoleAziEqi.png" alt="102016" width='500px'>
     </a>
+    <h2>World Bonne Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/54024WorldBonne.png">
+    <img src=".//maps/54024WorldBonne.png" alt="54024" width='500px'>
+    </a>
+    <h2>"The World From Space" Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/102038TheWorldFromSpace.png">
+    <img src=".//maps/102038TheWorldFromSpace.png" alt="102038" width='500px'>
+    </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
