--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>GEOG 370 Projects</h1>
     <a href="./Worldprojections/worldprojections.html">World Projections</a>
-    <a href="./3Tiles/tilesretry2.html">Tiles</a>
+    <br> <a href="./3Tiles/tilesretry2.html">Tiles</a>
 </body>
 </html>
