--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>GEOG 370 Projects</h1>
     <a href="./Worldprojections/worldprojections.html">World Projections</a>
     <br> <a href="./3Tiles/tilesretry2.html">Tiles</a>
+    <a href="./control_points.points">Control Points</a>
 </body>
 </html>
