--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="./Worldprojections/worldprojections.html">World Projections</a>
     <br> <a href="./3Tiles/tilesretry2.html">Tiles</a>
     <a href="./control_points.points">Control Points</a>
+    <br> <a href="./4Maps/1979stlouis.html">1979 St. Louis image</a>
 </body>
 </html>
