--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <br> <a href="./3Tiles/tilesretry2.html">Tiles</a>
     <a href="./control_points.points">Control Points</a>
     <br> <a href="./4Maps/1979stlouis.html">1979 St. Louis image</a>
-    <a href="./4Maps/georeferenced_both_layers_2.png">Georeferenced Tile - St. Louis</a>
+    <a href="./4Maps/georeferenced_bandw.html">Georeferenced Tile - St. Louis</a>
 </body>
 </html>
