--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="./control_points.points">Control Points</a>
     <br> <a href="./4Maps/1979stlouis.html">1979 St. Louis image</a>
     <a href="./4Maps/georeferenced_bandw.html">Georeferenced Tile - St. Louis</a>
+    <br> <a href="./leaflet/index.html">Basic Leaflet Map: UNC</a>
 </body>
 </html>
