--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <a href="./Worldprojections/worldprojections.html">World Projections</a>
     <br> <a href="./3Tiles/tilesretry2.html">Tiles</a>
     <a href="./control_points.points">Control Points</a>
-    <br> <a href="./4Maps/1979stlouis.html">1979 St. Louis image</a>
+    <br> <a href="./4Maps/1979stlouis.html">1979 St. Louis Image</a>
     <a href="./4Maps/georeferenced_bandw.html">Georeferenced Tile - St. Louis</a>
     <br> <a href="./leaflet/index.html">Basic Leaflet Map: UNC</a>
+    <br> <a href="./Hw6/only_bandw_tiles.html">St. Louis Map with Markers</a>
 </body>
 </html>
