--- a/Hw6/only_bandw_tiles.html
+++ b/Hw6/only_bandw_tiles.html
@@ -81,7 +81,7 @@ var unionIcon = L.icon({
 
       var slTiles = {
         "Open Street Map": osm,
-        "St. Louis Photo": slPhoto
+        "St. Louis 1979": slPhoto
       }
 
       var stadiumVector = {
