--- a/Hw6/only_bandw_tiles.html
+++ b/Hw6/only_bandw_tiles.html
@@ -55,7 +55,7 @@
 
 //UNION STATION
 var unionIcon = L.icon({
-        iconUrl: 'https://library.kissclipart.com/20190222/coq/kissclipart-train-clipart-train-rail-transport-steam-locomotiv-d5b009951f3de5e3.png',
+        iconUrl: 'https://www.pngitem.com/pimgs/m/14-143425_white-steam-png-steam-train-clipart-transparent-background.png',
         iconSize: [30, 30],
         popupAnchor: [0,0]
       });
