updates to hw 7

--- a/Hw7/hw7_template.html
+++ b/Hw7/hw7_template.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Homework 7: Census data choropleth </h1>
 <h2>Isabel O'Brien</h2>
-<h3>This map shows the median household income in different Pennsylvania counties in 2019. I was curious to see what the income range in Pennsylvania looked like, since I knew from visiting that there were both very rural and very urban areas. I was interested to find out that the US census website did not include data for many of the counties - I am not sure why this is, but it might have to do with how rural those counties are or a lack of sufficient data. The map projection is EPSG:2271. </h3>
+<h3>This map shows the median household income in Pennsylvania counties in 2019. I was curious to see what the income range in Pennsylvania would look like, since I knew from visiting that there were both very rural and very urban areas. I was interested to discover that the US census website did not include data for several of the counties - I am not sure why this is, but it might have to do with how rural those counties are or a lack of sufficient census information. The map projection is EPSG:2271. </h3>
 <!-- Your map goes here -->
 <a href="pa_med_income.png">
     <img src="pa_med_income.png" alt="your map" width='500px'>
