--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <a href="./4Maps/georeferenced_bandw.html">Georeferenced Tile - St. Louis</a>
     <br> <a href="./leaflet/index.html">Basic Leaflet Map: UNC</a>
     <br> <a href="./Hw6/only_bandw_tiles.html">St. Louis Map with Markers</a>
-    <br> <a href="./Hw7/hw7_template.html">Choropleth Map</a>
+    <br> <a href="./Hw7/hw7_template.html">Census Data Choropleth</a>
 </body>
 </html>
