--- a/Hw8/homework8.html
+++ b/Hw8/homework8.html
@@ -63,10 +63,10 @@
 
 <br><br><br>
 <h3>Total Population </h3>
-<h4>Since I used different data here than I did in Homework 7, here is a population map of Pennsylvania counties for reference. I thought it was interesting how clearly these maps show that less populated counties are generally correlated with lower average levels of education.</h4>
+<h4>Since I used different data here than I did in Homework 7, here is a map of Pennsylvania counties showing total number of people who only recieved a high school degree for reference. I thought it was interesting how clearly these maps show that less populated counties are generally correlated with lower average levels of education.</h4>
 <!-- Your map goes here -->
-<a href="pa_population.png">
-    <img src="pa_population.png" alt="your map" width='500px'>
+<a href="no ratio.png">
+    <img src="no ratio.png" alt="your map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
