--- a/Hw8/homework8.html
+++ b/Hw8/homework8.html
@@ -15,7 +15,7 @@
     people in a county whose highest degree was a high school diploma / 
     total population for that county) * 100]. This is different from the data 
     I used in homework 7 (that data had counties missing and also did not 
-    translate well to a ratio), so a simple population map is at the bottom 
+    translate well to a ratio), so a map produced without using ratios is at the bottom 
     of this page for reference.</h3>
 
 <!-- explain the ratio, the reason for creating it, and pros and cons -->
@@ -62,7 +62,7 @@
     </a>
 
 <br><br><br>
-<h3>Total Population </h3>
+<h3>No Ratio  </h3>
 <h4>Since I used different data here than I did in Homework 7, here is a map of Pennsylvania counties showing total number of people who only recieved a high school degree for reference. I thought it was interesting how clearly these maps show that less populated counties are generally correlated with lower average levels of education.</h4>
 <!-- Your map goes here -->
 <a href="no ratio.png">
