--- a/Hw8/homework8.html
+++ b/Hw8/homework8.html
@@ -65,8 +65,8 @@
 <h3>No Ratio  </h3>
 <h4>Since I used different data here than I did in Homework 7, here is a map of Pennsylvania counties showing total number of people who only recieved a high school degree for reference. I thought it was interesting how clearly these maps show that less populated counties are generally correlated with lower average levels of education.</h4>
 <!-- Your map goes here -->
-<a href="no ratio.png">
-    <img src="no ratio.png" alt="your map" width='500px'>
+<a href="no_ratio_legend.png">
+    <img src="no_ratio_legend.png" alt="your map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
