--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <br> <a href="./Hw6/only_bandw_tiles.html">St. Louis Map with Markers</a>
     <br> <a href="./Hw7/hw7_template.html">Census Data Choropleth</a>
     <br> <a href="./Hw8/homework8.html">Census Data Ratios and Categories</a>
+    <br> <a href="./Hw9/homework9.html">Choropleth Map</a>
 </body>
 </html>
