--- a/Hw9/homework9.html
+++ b/Hw9/homework9.html
@@ -10,17 +10,17 @@
 <h2>Isabel O'Brien</h2>
 <h3>map description here </h3>
 <!-- Your map goes here -->
-<a href="pa_med_income.png">
-    <img src="pa_med_income.png" alt="your map" width='500px'>
+<a href="percentage_vaccinated.png">
+    <img src="percentage_vaccinated.png" alt="your map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a href="pa_counties_2271.shp"> Link to vector file </a>
+    <a> Link to vector file: https://www.census.gov/cgi-bin/geo/shapefiles/index.php </a>
     <p></p>
-    <a href="med_income_data.csv"> Source of CSV </a>
+    <a> Source of CSV: https://worldpopulationreview.com/state-rankings/vaccination-rates-by-state </a>
     <p></p>
-    <a href="pa_counties.geojson"> Clean CSV </a>
+    <a href="csvData copy.csv"> Clean CSV </a>
 
 </body>
 </html>
