--- a/Hw9/homework9.html
+++ b/Hw9/homework9.html
@@ -8,7 +8,10 @@
 <body>
 <h1>Homework 9: Choropleth Map </h1>
 <h2>Isabel O'Brien</h2>
-<h3>map description here </h3>
+<h3>This map shows the percentage of people in each state in 2019 
+    who are fully vaccinated. I wanted to make this map because
+    COVID and the increased presence of anti-vax communities 
+    made me wonder what percentage of people are getting vaccinated.</h3>
 <!-- Your map goes here -->
 <a href="percentage_vaccinated.png">
     <img src="percentage_vaccinated.png" alt="your map" width='500px'>
@@ -16,9 +19,10 @@
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a> Link to vector file: https://www.census.gov/cgi-bin/geo/shapefiles/index.php </a>
     <p></p>
-    <a> Source of CSV: https://worldpopulationreview.com/state-rankings/vaccination-rates-by-state </a>
+    <a href="https://www.census.gov/cgi-bin/geo/shapefiles/index.php"> Vector File </a>
+    <p></p>
+    <a href="https://worldpopulationreview.com/state-rankings/vaccination-rates-by-state"> Source of CSV </a>    
     <p></p>
     <a href="csvData copy.csv"> Clean CSV </a>
 
