--- a/Hw9/homework9.html
+++ b/Hw9/homework9.html
@@ -11,7 +11,7 @@
 <h3>This map shows the percentage of people in each state in 2019 
     who are fully vaccinated. I wanted to make this map because
     COVID and the increased presence of anti-vax communities 
-    made me wonder what percentage of people are getting vaccinated.</h3>
+    made me wonder what percentage of people are getting vaccinated. I noticed that sates in New England particularly (with generally denser populations), as well as some others that seemed more random, had the highest rates of vaccination. More rural states tended to generally have lower rates of vaccination.   </h3>
 <!-- Your map goes here -->
 <a href="percentage_vaccinated.png">
     <img src="percentage_vaccinated.png" alt="your map" width='500px'>
