--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <br> <a href="./Hw7/hw7_template.html">Census Data Choropleth</a>
     <br> <a href="./Hw8/homework8.html">Census Data Ratios and Categories</a>
     <br> <a href="./Hw9/homework9.html">Choropleth Map</a>
+    <br> <a href="./Hw10/homework10.html">Geoprocessing Analysis</a>
 </body>
 </html>
