--- a/Hw10/homework10.html
+++ b/Hw10/homework10.html
@@ -8,7 +8,15 @@
 <body>
 <h1>Homework 10: Geoprocessing Analysis </h1>
 <h2>Isabel O'Brien</h2>
-<h3> description goes here  </h3>
+<h3> I wanted to make this map becuase my dad often likes to get 
+    coffee when we go on bike rides, and I wanted to display which bike 
+trails were close to a Starbucks. To do this, I found data showing the
+locations of every Starbucks in the US, the greenway trails in Wake
+County, and an outline of Wake County itself. I then used the buffer
+tool to create buffers around each Starbucks location with a radius of
+1,000 feet. I then used the intersection tool to highlight where
+these buffers overlapped with the trails. The result was a map that
+clearly shows which trails we can ride on and still easily get coffee!  </h3>
 <!-- Your map goes here -->
 <a href="final_map2.png">
     <img src="final_map2.png" alt="your map" width='500px'>
