--- a/Hw10/homework10.html
+++ b/Hw10/homework10.html
@@ -29,7 +29,7 @@ clearly shows which trails we can ride on and still easily get coffee!  </h3>
     <p></p>
     <a href="https://catalog.data.gov/dataset/greenways-in-wake-county-nc"> Wake County greenways data source</a>    
     <p></p>
-    <a href="fix this"> Clean CSV </a>
+    <a href="intersection_data.csv"> Intersection CSV data </a>
 
 </body>
 </html>
