--- a/Hw10/homework10.html
+++ b/Hw10/homework10.html
@@ -8,6 +8,7 @@
 <body>
 <h1>Homework 10: Geoprocessing Analysis </h1>
 <h2>Isabel O'Brien</h2>
+<h2>Proximity of bike trails to Starbucks cafes in Wake County</h2>
 <h3> I wanted to make this map becuase my dad often likes to get 
     coffee when we go on bike rides, and I wanted to display which bike 
 trails were close to a Starbucks. To do this, I found data showing the
